@@ -22,9 +22,11 @@
     <calculator.version>1</calculator.version>
     <webdrivermanager.version>4.4.3</webdrivermanager.version>
     <selenium-java.version>4.0.0-beta-4</selenium-java.version>
-    <allure.version>2.14.0</allure.version>
-    <aspectj.version>1.9.5</aspectj.version>
+    <allure.version>2.13.2</allure.version>
+    <aspectj.version>1.9.6</aspectj.version>
     <allure-maven.version>2.10.0</allure-maven.version>
+    <jdi-light.version>1.3.12</jdi-light.version>
+    <gson.version>2.8.8</gson.version>
     <cucumber.version>6.11.0</cucumber.version>
   </properties>
 
@@ -35,11 +37,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <argLine>
-            --illegal-access=permit
-            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-          </argLine>
-          <suiteXmlFiles>
+         <suiteXmlFiles>
             <suiteXmlFile>
               ${maven-surefire-plugin.suiteXmlFile}
             </suiteXmlFile>
@@ -163,7 +161,16 @@
         </maven-surefire-plugin.suiteXmlFile>
       </properties>
     </profile>
+        </profile>
     <profile>
+      <id>jdi-homework8</id>
+      <properties>
+        <maven-surefire-plugin.suiteXmlFile>
+          ${project.build.testOutputDirectory}/testng/jdi.homework8.xml
+        </maven-surefire-plugin.suiteXmlFile>
+      </properties>
+    </profile>
+  <profile>
       <id>selenium-homework5-bdd</id>
       <properties>
         <maven-surefire-plugin.suiteXmlFile>
@@ -227,9 +234,15 @@
       <version>${cucumber.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.qameta.allure</groupId>
-      <artifactId>allure-cucumber6-jvm</artifactId>
-      <version>${allure.version}</version>
+    <dependency>
+      <groupId>com.epam.jdi</groupId>
+      <artifactId>jdi-light-html</artifactId>
+      <version>${jdi-light.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${gson.version}</version>
     </dependency>
   </dependencies>
 
